--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--secondary);
     color: var(--dark);
-    max-width: 1918px;
+    margin: 0;
 }
 
 .container {
@@ -59,14 +59,14 @@ body {
     font-size: 18px;
     line-height: 27px;
     font-family: 'Poppins', sans-serif;
-
+    cursor: pointer;
 }
 
 /* Hero */
 .hero__info {
     color: var(--gray);
     font-size: 24px;
-    margin-top: 40px;
+    padding-top: 40px;
 }
 
 .hero__text {
@@ -105,4 +105,77 @@ body {
     position: absolute;
     right: 21px;
     top: calc(50% - 24px);
+}
+
+/* hero-Services */
+.hero__services {
+    background-color: var(--gray);
+    max-width: 1200px;
+    margin-top: 84px;
+}
+
+.services {
+    display: flex;
+    gap: 3.1vw;
+    padding: 60px 48px 60px 0;
+    position: relative;
+}
+
+.services::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: var(--gray);
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: -160px;
+}
+
+.services__col {
+    flex-basis: 328px;
+}
+
+.services__title {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 27px;
+    margin-bottom: 10px;
+}
+
+.services__text {
+    font-size: 18px;
+    line-height: 27px;
+    font-weight: 400;
+    margin: 0;
+}
+
+/* Bunner */
+.hero {
+    position: relative;
+    max-width: 1918px;
+}
+
+.hero__banner {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: 0 auto;
+    height: 100%;
+    z-index: -1;
+}
+
+.banner {
+    position: relative;
+    overflow: hidden;
+    width: 808px;
+    height: 100%;
+}
+
+.banner__img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
 }
