--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,10 @@ body {
 }
 
 /* Header */
+
 .header {
     display: flex;
-    gap: 4.5vw;
+    gap: 6.6vw;
     justify-content: space-between;
     align-items: center;
     padding-top: 30px;
@@ -37,7 +38,7 @@ body {
 .header__nav {
     flex-grow: 1;
     display: flex;
-    gap: 2.2vw;
+    gap: 3.3vw;
 }
 
 .header__link {
@@ -49,6 +50,7 @@ body {
     color: var(--primary);
     cursor: pointer;
     transition: .4s;
+    color: var(--primary);
 }
 
 .header__btn {
@@ -60,6 +62,42 @@ body {
     line-height: 27px;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
+}
+
+.header__btn:hover {
+    background-color: var(--primary);
+    color: var(--secondary);
+    transition: .4s;
+}
+
+/* Bunner */
+.hero {
+    position: relative;
+    max-width: 1918px;
+}
+
+.hero__banner {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: 0 auto;
+    height: 100%;
+    z-index: -1;
+}
+
+.banner {
+    position: relative;
+    overflow: hidden;
+    width: 808px;
+    height: 100%;
+}
+
+.banner__img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
 }
 
 /* Hero */
@@ -95,6 +133,12 @@ body {
     margin-top: 56px;
 }
 
+.hero__link:hover {
+    background-color: var(--dark);
+    color: var(--primary);
+    transition: .4s;
+}
+
 .hero__link::after {
     content: '';
     display: block;
@@ -116,7 +160,7 @@ body {
 
 .services {
     display: flex;
-    gap: 3.1vw;
+    gap: 4.6vw;
     padding: 60px 48px 60px 0;
     position: relative;
 }
@@ -150,32 +194,130 @@ body {
     margin: 0;
 }
 
-/* Bunner */
-.hero {
-    position: relative;
-    max-width: 1918px;
+/* Feedback */
+.feedback {
+    padding-top: 84px;
+    padding-bottom: 98px;
 }
 
-.hero__banner {
+.heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.heading__right {
+    display: flex;
+    gap: 10px;
+}
+
+.description {
+    font-size: 14px;
+    background-color: var(--dark);
+    line-height: 21px;
+    color: #fff;
+    position: relative;
+    padding: 3px 9px;
+    display: inline-block;
+}
+
+.description::before {
+    content: '';
+    display: block;
+    width: 5px;
+    height: 100%;
+    background-color: var(--primary);
     position: absolute;
-    right: 0;
     top: 0;
-    margin: 0 auto;
-    height: 100%;
-    z-index: -1;
+    left: -5px;
 }
 
-.banner {
-    position: relative;
-    overflow: hidden;
-    width: 808px;
-    height: 100%;
+.title {
+    color: #fff;
+    font-weight: 600;
+    font-size: 35px;
+    line-height: 52px;
+    margin: 0;
+    margin-bottom: 40px;
 }
 
-.banner__img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    object-fit: cover;
+/* Swiper */
+.swiper-button-next,
+.swiper-button-prev {
+    width: 44px;
+    height: 44px;
+    background-color: var(--dark);
+    position: inherit;
+    right: inherit;
+    left: inherit;
+    border-radius: 100%;
+    display: flex;
+    margin-bottom: 40px;
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+    background-color: var(--primary);
+    transition: .4s;
+}
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+    display: none;
+}
+
+.swiper-button-next path,
+.swiper-button-prev path {
+    stroke: #fff;
+    transition: .4s;
+}
+
+.swiper-button-next path:hover,
+.swiper-button-prev path:hover {
+    stroke: var(--dark);
+}
+
+.swiper-slide {
+    background-color: #F4F4F4;
+    padding: 62px 72px;
+    box-sizing: border-box;
+    height: auto;
+}
+
+.swiper-slide:nth-child(2n) {
+    background-color: var(--dark);
+    color: #fff;
+}
+
+.swiper-slide__head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 24px;
+}
+
+.swiper-slider__info {
+    flex-grow: 1;
+}
+
+.swiper-slider__autor {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0;
+}
+
+.swiper-slider__role {
+    font-weight: 500;
+    line-height: 1.5;
+    margin-bottom: 0;
+    margin-top: 2px;
+}
+
+.swiper-slide__text {
+    font-style: italic;
+    font-weight: 500;
+    line-height: 1.5;
+    margin: 0;
 }
